@@ -1,5 +1,10 @@
 2007-08-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* tests/test_thbrk.c (main), tests/test_thwbrk.c (main): Update check
+	values, according to the new compound words support.
+
+2007-08-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* doc/Doxyfile.in: Update for doxygen 1.5.3.
 
 2007-08-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>
@@ -1439,13 +1444,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.151 2007-08-28 04:07:22 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.152 2007-08-28 08:28:21 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.151 2007-08-28 04:07:22 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.152 2007-08-28 08:28:21 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
